# shortify

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
migrations/2023-06-14-004820_create_urls/: up.sql
src/: actions.rs  database.rs  main.rs  models.rs  routes.rs  schema.rs
