[package]
name = "shortify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bs58 = "0.5.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
serde = { version = "1.0.163", features = ["std", "derive"] }
sha2 = "0.10.6"
